<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/dock_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/dock_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/dock_review"
        android:title="@string/title_timeline" />
    <item
        android:id="@+id/navigation_myDining"
        android:icon="@drawable/dock_mydining"
        android:title="@string/title_myDining"/>
    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/dock_account"
        android:title="@string/title_login"/>

</menu>